@@ -1,6 +1,7 @@
 49
 ================
 
+31/08/24 PetFBI: Add columns for IntakeDate and PickupAddress
 31/08/24 PetFBI: Only include stray holds, not strays separately from holds
 31/08/24 Found->Animal, don't assign original owner, copy found area to entry
 31/08/24 New lost/found animal not using default colour
